*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9183 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -821,7 +821,7 @@ team.status.booked=Venskabskamp arrangeret
 button.ok=OK
 button.cancel=Annuller
 button.close=Luk
-button.customize=Tilpasse
+button.customize=Tilpasning
 button.save=Gem
 button.go=Go\!
 button.add=Tilføj
