--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -277,7 +277,7 @@ module.LeagueNewsFilter.lineup_changes.desc=Show only lineup changes
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Moves managers online up on region page. Caution\! This gets very slow if the list of online players get over 100.
 module.TeamPopupLinks.desc=Displays a small pop-up window with quick links when you hover over a TeamID link
-module.TeamPopupLinks.OwnTeamHighlight.desc=Highlight own team in tables
+module.TeamPopupLinks.TeamHighlight.desc=Highlight current team in tables
 module.TeamPopupLinks.TeamLinks.desc=Add popups to team links
 module.TeamPopupLinks.UserLinks.desc=Add popups to manager links
 module.TeamPopupLinks.Manager.desc=Manager (for team links only)
