--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -183,6 +183,8 @@ module.MatchOrderInterface.Specialties.desc=Amosar especialidade dos xogadores
 #Series statistics
 
 #Save for work
+SafeForWork.title=Título
+SafeForWork.icon=Icona
 
 #Extrashortcuts
 ExtraShortcuts.statistics=estatísticas
@@ -215,6 +217,8 @@ seasonstats.friendly=Amigables
 seasonstats.cup=Copa
 
 #Newsfeed filter
+LeagueNewsFilter.label=Filtro de novas\:
+LeagueNewsFilter.all=Todas
 LeagueNewsFilter.friendlies=Amigabeis e trocos de adestrador
 LeagueNewsFilter.transfers=Traspasos
 LeagueNewsFilter.lineupChanges=Trocos na aliñación
@@ -224,6 +228,7 @@ sidebarBox.actions=Accións
 TeamSelectBox.selectplayer=Selecciona un xogador
 ExtendedPlayerDetails.perseason=/tempada
 ManagerButtons.writeInGuestbook=Escribir no Libro de visitas
+ShowFriendlyBooked.ShowFriendlies=Amosar amigábeis
 
 #Transfer prices
 MedianTransferPrice.median=Mediana do prezo
@@ -234,6 +239,7 @@ AddLeaveConfButton.LeaveForum=Abandoar conferencia
 AddLeaveConfButton.alert=Fai clic no botón de 'Gardar' na seguinte páxina para abandoar esta conferencia
 HideSignatures.signaturetoggle=Sinatura
 MarkUnread.markunread=Marcar non lido dende aqui
+EmbedMedia.EmbeddedImage=Imaxe embebida
 MarkAllAsRead.title=Marcar todos os fíos nas conferencias como lidos
 
 # ForumTemplates
@@ -338,6 +344,7 @@ categories.FW=DI
 categories.S=S
 categories.R=R
 categories.E1=E1
+categories.E2=E2
 
 #match positions
 match.pos.kp=Porteiro
@@ -360,10 +367,21 @@ match.pos.mcm=Mediocentro Centrado
 match.pos.mcm.abbr=MCC
 match.pos.rcm=Mediocentro dereito
 match.pos.rcm.abbr=MCD
+match.pos.rw=Extremo dereito
 match.pos.rw.abbr=ED
+match.pos.lf=Dianteiro Esquerdo
+match.pos.lf.abbr=DiaE
+match.pos.mf=Dianteiro Centro
+match.pos.mf.abbr=DiaC
+match.pos.rf=Dianteiro dereito
+match.pos.rf.abbr=DiaD
 
+match.role.setPieces=Lanzador de faltas
+match.role.setPieces.abbr=BP
 match.role.captain=Capitán
+match.role.captain.abbr=Cap.
 
+match.player.unknown=Xogador descoñecido
 
 # SkillTable
 SkillTable.header=Táboa de habilidades
@@ -373,7 +391,12 @@ SkillTable.showTimeInClub=Mostrar tempo no club
 SkillTable.switchView.title=Trocar a vista da táboa.
 SkillTable.addHomegrown.title=Engade todos os xogadores da casa do actual primeiro equipo
 SkillTable.showTimeInClub.title=Amosa o tempo dende que se uniu ao primeiro equipo
+PlayerNumber=Número de xogador
+PlayerNumber.abbr=\#
+TSI=TSI
 TSI.abbr=TSI
+CanBePromotedIn.abbr=Prom
+Personality=Personalidade
 Agreeability=Carácter
 Agreeability.abbr=Ca
 Aggressiveness=Agresividade
@@ -399,18 +422,34 @@ Yellow_card.abbr=A
 Red_card=Cartón Vermello
 Red_card.abbr=V
 Speciality=Especialidade
+Speciality.abbr=Esp
+Last_match=Último partido
+Last_match.abbr=Ult
+Last_stars=Últimas estrelas
+Last_stars.abbr=Cal
 Last_stars_EndOfGame=Últimas estrelas amarelas
+Last_stars_EndOfGame.abbr=Cal
+Last_stars_decline.abbr=Dif
+Last_position=Última posición
+Last_position.abbr=Pos
 #following string uses pluralForms
 Last_match_played_as_at=Xogou %1 min como %2 no último encontro, o %3.
+Bruised=Mancados
+Bruised.abbr=Manc
+Injured=Lesionados
+Injured.abbr=Les
 Salary=Salario
 Salary.abbr=Salario
 TransferListed=Na lista de traspasos
 TransferListed.abbr=LT
 NrOfMatches=Número de partidos
+NrOfMatches.abbr=NP
 LeagueGoals=Goles na liga
 LeagueGoals.abbr=GL
 CupGoals=Goles na Copa
 CupGoals.abbr=GC
+FriendliesGoals=Goles en amigabeis
+CareerGoals=Goles na carreira
 Hattricks=Hattricks
 Hattricks.abbr=HT
 Current_club=Club actual
@@ -421,6 +460,7 @@ JoinedSince.abbr=Dende
 Coach=Adestrador
 CurrentSquad=Equipo actual
 Nationality=Nacionalidade
+Nationality.abbr=Nac
 Flag=Bandeira
 Flag.abbr=Bandeira
 Player=Xogador
@@ -464,6 +504,7 @@ links.custom.helptext2=Tamén podes exportar as túas ligazóns e compartilas. P
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
+copy.link=Copiar a localización do enlace en formato HT-ML
 copy.ht-ml=Copiar en HT-ML
 copy.table=Copiar a tabla en HT-ML
 
@@ -531,7 +572,9 @@ Achievements=Logros
 TransferHistory=Historial de traspasos
 TeamHistory=Historia do clube
 NextMatch=Seguinte encontro
+AddNextMatch=Engadir o próximo partido a HT Live
 LastLineup=Última aliñación
+YouthMatches=Partidos de xuvenís
 more=máis...
 less=menos...
 
@@ -557,10 +600,16 @@ RapidId.view=Ver
 # HTMSPrediction
 HTMSPrediction.prediction=Resultado prognosticado
 HTMSPrediction.winDrawLoss=Gañar/Empatar/Perder
+HTMSPrediction.title=Análise de partido por HTMS
+HTMSPrediction.changePrediction=Trocar predicción
 HTMSPrediction.team=Equipo
 
 #htms table of statistical truth
+truthTable.predicted_position=\#
 truthTable.name=Equipo
+truthTable.real_position=Pos. real
+truthTable.real_points=Puntos reais
+truthTable.predicted_points=Puntos pred.
 truthTable.difference=±
 
 # HTMSPoints
@@ -608,6 +657,7 @@ pageAction.mainContent=Mostrar o contido principal
 pageAction.leftMenu=Amosar barra á esquerda
 pageAction.all=Amosar todos
 
+team.status.booked=Amigable arranxado
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
@@ -664,6 +714,10 @@ ReadHtPrefs.HTLanguageChanged=Foxtrick detectou un troco de idioma. O idioma de 
 # option function strings
 TickerAlert.enable=Habilitar
 TickerAlert.sound=Son
+TeamPopupLinks.prefsCaption=Preferencias de enlaces
+TeamPopupLinks.ShowByDefault=Amosar por defecto
+TeamPopupLinks.ShowOnMore=Amosar máis
+TeamPopupLinks.OpenNewTab=Abrir nunha nova lapela
 
 #toolbar
 toolbar.title=FoxTrick
