--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -47,7 +47,16 @@ module.StaffMarker.own.desc=Marcadores personais
 module.ForumYouthIcons.desc=Mostra unha barra de enlaces para a academia de xuvenís (tamen funciona nos correos)
 #FormatPostingText
 #EmbedMedia
+module.EmbedMedia.EmbedFunnyOrDieVideos.desc=Embeber videos de FunnyOrDie
+module.EmbedMedia.EmbedDailymotionVideos.desc=Embeber videos de Dailymotion
+module.EmbedMedia.EmbedModeOEmebed.desc=Usar oEmbed para embeber multimedia (só para Firefox e Chrome)
+module.EmbedMedia.ReplaceLinksByTitles.desc=Rempraza o texto do enlace pola etiqueta do tipo de arquivo, p.e. nome da imaxe
+module.EmbedMedia.EmbedFlickrImages.desc=Imaxe de Flickr embebida
+module.EmbedMedia.EmbedDeviantArtImages.desc=Imaxe de Deviantart embebida
+module.EmbedMedia.EmbedGenericImages.desc=Imaxes embebidas se o link é dunha imaxe
+module.EmbedMedia.EmbedGenericImagesClever.desc=Intentar adiviñar a dirección correcta da imaxe inda cando inicialmente o enlace orixinal non pareza estar enlazando a unha imaxe.
 #Forum direct page links
+module.DirectPageLinks.desc=Engade enlaces que che permiten saltar a unha certa páxina nun fío das conferencias.
 #
 module.CopyPostID.desc=Alteracións da ID das mensaxes da conferencia
 module.ShowForumPrefButton.desc=Presenta un atallo ás preferencias da conferencia en tódalas páxinas da mesma
@@ -171,9 +180,29 @@ module.YouthSkillHideUnknown.HideUnknown.desc=Agochar habilidades descoñecidas
 module.SkillTable.OtherTeams.desc=Habilitar para outros equipos
 #HighlightCupwins
 #CountryList
+module.CountryList.ManagerPage.desc=Amosa un texto de enlace á liga diante da lingua na páxina do mánager
+module.CountryList.HideFlagOntop.desc=Elimina a imaxe de enlace á liga na páxina do equipo
+module.MatchTables.desc=Elimina espacios en branco nas táboas de partidos
+module.MatchTables.RemoveTime.desc=Elimina a hora do partido na táboa de partidos actual
+module.YouthPromotes.desc=Amosa os días ata poder promocionar un xuvenil
+module.HTMSPrediction.desc=Engade predicción de resultado na páxina de reporte de partido
+module.HighlightOwnerless.desc=Destaca equipos sen dono na páxina da liga.
+module.LastLogin.desc=Amosa o tempo dende o último acceso na páxina do usuario
+module.TransferCompareSort.desc=Pulsando na cabeceira ordea os resultados do Comparador de Traspasos por TSI, prezo ou forma
 module.HTMSPoints.AddToPlayer.desc=Amosar na páxina do xogador
 module.MyMonitor.TeamIcons.desc=Amosar escudos dos equipos
 module.MatchOrderInterface.Specialties.desc=Amosar especialidade dos xogadores
+module.MatchOrderInterface.SwapPositions.desc=Engade un enlace para intercambiar os xogadores da esquerda polos da dereita
+module.MatchSimulator.desc=Engade un simulador de partidos a interface de ordes.
+module.MatchSimulator.RatingsOnTop.desc=Mantén a predicción de calificacións arriba
+module.MatchSimulator.RatingsBelow.desc=Amosa a predicción debaixo
+module.MatchSimulator.RatingsRight.desc=Amosa a predicción á dereita
+module.HeaderToggle.desc=Pulsando en cabeceiras-H2 pasa de amosar a agochar a seguinte sección. Lembra a última posición indivialmente segundo o tipo de páxina e o título da cabeceira
+module.Filter.desc=Engade filtro á páxina de mellores xogadores
+module.RatingsDisplay.desc=Amosa calificacións medias nun estilo diferencte
+module.RatingsDisplay.DenominationsRange.desc=Niveis no rango 0-20
+module.RatingsDisplay.HatStats.desc=Como HatStats
+module.SafeForWork.desc=Rempraza a icona e o texto do título das lapelas de Hattrick para parecer menos sospoeitoso. Asegúrate de que deshabilitas o resto de módulos que poderían ser perigosos, por exemplo os módulos de "Alertas".
 
 # -----------------------------------------------------------------------------
 
@@ -181,6 +210,7 @@ module.MatchOrderInterface.Specialties.desc=Amosar especialidade dos xogadores
 # IN-GAME STRINGS. translate first
 
 #Series statistics
+rating.average=Calificacións medias
 
 #Save for work
 SafeForWork.title=Título
@@ -193,6 +223,9 @@ ExtraShortcuts.ManageCHPP=Xestiona os teus productos CHPP
 ExtraShortcuts.prefs=Preferencias
 
 #HistoryStats
+HistoryStats.boxheader=Estatísticas históricas
+HistoryStats.cupwinner=Gañador de copa
+HistoryStats.cupwinner.short=GC
 
 # YouthPromotes
 #following string uses pluralForms
@@ -200,6 +233,7 @@ ExtraShortcuts.prefs=Preferencias
 #teamstats+filters
 TeamStats.boxheader=Ollada xeral
 TeamStats.General=Xeral
+TeamStats.PlayerNotToOld=Xogadores < 19 anos
 TeamStats.Cards=Tarxetas
 TeamStats.Injured=Lesionados
 TeamStats.TransferListed=Na lista de traspasos
@@ -227,6 +261,9 @@ LeagueNewsFilter.lineupChanges=Trocos na aliñación
 sidebarBox.actions=Accións
 TeamSelectBox.selectplayer=Selecciona un xogador
 ExtendedPlayerDetails.perseason=/tempada
+ExtraPlayerInfo.defensiveTrainer=Un adestrador %s que é defensivo.
+ExtraPlayerInfo.offensiveTrainer=Un adestarador %s que é ofensivo.
+ExtraPlayerInfo.balancedTrainer=Un adestrador %s que é neutro.
 ManagerButtons.writeInGuestbook=Escribir no Libro de visitas
 ShowFriendlyBooked.ShowFriendlies=Amosar amigábeis
 
@@ -237,9 +274,12 @@ MedianTransferPrice.average=Precio medio
 #forum
 AddLeaveConfButton.LeaveForum=Abandoar conferencia
 AddLeaveConfButton.alert=Fai clic no botón de 'Gardar' na seguinte páxina para abandoar esta conferencia
+ShowForumPrefButton.forumPreferences=Preferencias das conferencias
+FormatPostingText.ShowNestedQuotes=Amosar citas anidadas
 HideSignatures.signaturetoggle=Sinatura
 MarkUnread.markunread=Marcar non lido dende aqui
 EmbedMedia.EmbeddedImage=Imaxe embebida
+ForumStripHattrickLinks.ask=Queres quitar o servidor de Hattrick dos enlaces para facelos útiles nas conferencias?
 MarkAllAsRead.title=Marcar todos os fíos nas conferencias como lidos
 
 # ForumTemplates
@@ -259,10 +299,14 @@ ForumPreview.send=Enviar
 #ForumYouthIcons
 ForumYouthIcons.toolbar.main=Ligazóns principais
 ForumYouthIcons.toolbar.youth=Ligazóns de xuvenís
+ForumYouthIcons.toolbar.tournament=Torneos
+ForumYouthIcons.toolbar.other=Outros
 ForumYouthIcons.youthplayerid=Ligazón a un xogador xuvenil
 ForumYouthIcons.youthteamid=Ligazón a un equipo xuvenil
 ForumYouthIcons.youthmatchid=Engadir unha ligazón a un encontro de xuvenís
 ForumYouthIcons.youthseries=Engadir unha ligazón a unha liga xuvenil
+ForumYouthIcons.debug=Inserta traza de depuración de Foxtrick.
+ForumYouthIcons.settings=Inserta configuración de Foxtrick.
 ForumSpecialBBCode.br=Engade un salto de liña
 ForumSpecialBBCode.user=Engadir id usuario
 ForumSpecialBBCode.article=Engadir id editorial
@@ -288,6 +332,7 @@ Filters.XP=Experiencia
 Filters.specialty=Especialidade
 Filters.stars=Estrelas
 Filters.minimum=Como mínimo
+Filters.maximum=Máximo
 
 match.type.league=Liga
 match.type.qualification=Cualificación
@@ -482,6 +527,8 @@ skilltable.rebought_youthplayer=Xuvenil recomprado
 #confirms
 ConfirmActions.bid=Estás seguro de querer poxar por este xogador? O seu prezo é de %s
 ConfirmActions.transferlist=Estás seguro de querer trasferir este xogador? O seu prezo mínimo de venda sería de %s
+ConfirmActions.hirestaff=Desexas contratar %num %kind?
+ConfirmActions.sackstaff=Desexas despedir %num %kind?
 ConfirmActions.ntremove=Estás seguro de queres engadir/eliminar a este xogador da selezón?
 
 # links
@@ -516,6 +563,11 @@ copy.matchid.copied=O ID do partido foi copiado ao portatpeis.
 copy.skilltable.title=Copiar táboa de habilidades ao portapapeis (en formato HT-ML)
 copy.skilltable.copied=A táboa de habilidades foi copiada ao portapapeis.
 copy.postid=Copiar ao portapapeis
+copy.postid.copied=ID de resposta [post\=%s] foi copiado ao portapapeis.
+copy.posting=Copiar con estilo %s
+copy.posting.title=Copiar resposta con estilo %s
+copy.posting.copied=Resposta %s foi copiada ao portapapeis.
+copy.posting.style.ht-ml=HTML
 copy.ratings.both=Copiar calificacións (en HT-ML)
 copy.ratings.home=Copiar calificacións locais (en HT-ML)
 copy.ratings.away=Copiar calificacións visitante (en HT-ML)
@@ -596,6 +648,11 @@ TransferSearchResultFilters.days=Días\:
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Ver
+RapidId.viewById=Ver por ID
+RapidId.senior=Primeiro Equipo
+RapidId.youth=Xuvenís
+RapidId.tournaments=Torneos
+RapidId.tournament=Torneo
 
 # HTMSPrediction
 HTMSPrediction.prediction=Resultado prognosticado
@@ -700,6 +757,7 @@ oauth.success=Foxtrick foi autorizado con éxito\! Por favor, recarga esta páxi
 
 api.serverUnavailable=Servidor non dispoñible
 api.clearCache=Limpiar caché
+api.clearCache.title=Limpar a caché Xml de Foxtrick. Foxtrick descarga información extra dos servidores de Hattrick baixo demanda. Ata que pechas o navegador, FoxTrick usará a posteriori datos almacenados localmente. En raras ocacións poden quedar desfasados. Limpa a caché se queres que FoxTrick descargue a información extra outra vez.
 
 
 log.header=Traza de FoxTrick
@@ -776,6 +834,10 @@ prefs.loadSave.import.notice=Pega as túas preferencias gardadas na área de tex
 
 prefs.additional.title=Opcións xerais
 prefs.additional.xmlLoad=Carga os XMLs para obter información extra de Hattrick
+prefs.additional.smallCopyIcons=Amosar iconas de copiar na cabeceira no lugar da barra lateral
+prefs.additional.anstoss2Icons=Usar iconas Anstoss2 para as especialidades
+prefs.additional.featureHighlight=Destacar as características de FoxTrick
+prefs.additional.HTMLDebugLog=Amosar trazas de FoxTrick no fondo das páxinas (para depuración)
 
 prefs.feedback.saved=Preferencias gardadas\!
 prefs.feedback.loaded=Preferencias cargadas\!
@@ -790,6 +852,7 @@ link.recentChanges=Trocos recentes
 
 releaseNotes.show=Mostrar notas da edición despois de cada actualización
 releaseNotes.showFor=Mostrar notas da edición para\:
+releaseNotes.version=Versión\:
 
 about.copyright=Dereitos de autor
 about.developers=Desarrolladores
