*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9188 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -275,6 +275,7 @@ module.LeagueNewsFilter.lineup_changes.desc=Uniquement les informations concerna
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Déplace vers le haut la liste des membres connectés des pages Région. Attention\! L'affichage sera très lent si le nombre de joueurs en ligne est supérieur à 100.
 module.TeamPopupLinks.desc=Affiche une fenêtre avec les raccourcis sélectionnés lorsque vous survolez le lien d'une équipe et/ou d'un utilisateur.
+module.TeamPopupLinks.TeamHighlight.desc=Surligner notre équipe dans les classements
 module.TeamPopupLinks.TeamLinks.desc=Activer pour les liens des équipes
 module.TeamPopupLinks.UserLinks.desc=Activer pour les liens des utilisateurs
 module.TeamPopupLinks.Manager.desc=Manager (uniquement depuis un lien Équipe)
@@ -389,6 +390,7 @@ module.SafeForWork.desc=Remplace l'icône et le texte du titre des onglets Hattr
 # IN-GAME STRINGS. translate first
 
 #Series statistics
+rating.average=Notes moyennes
 
 #Save for work
 SafeForWork.title=Titre
