--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -276,6 +276,7 @@ module.LeagueNewsFilter.lineup_changes.desc=Prikazati samo obavijesti o promjena
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Premjestiti trenutno aktivne (online) korisnike na vrh stranice za regiju. Oprez\! Učitavanje može postati vrlo sporo ako online korisnika ima preko 100.
 module.TeamPopupLinks.desc=Prikazati okvir s prečicama prilikom prelaska preko linka momčadi
+module.TeamPopupLinks.TeamHighlight.desc=Istakni trenutnu momčad u tablici
 module.TeamPopupLinks.TeamLinks.desc=Dodati okvir s prečicama na linku za momčad
 module.TeamPopupLinks.UserLinks.desc=Dodati okvir s prečicama na korisnikov nadimak
 module.TeamPopupLinks.Manager.desc=Link na korisnika (samo na linku momčadi)
