--- a/content/locale/ja/foxtrick.properties
+++ b/content/locale/ja/foxtrick.properties
@@ -408,7 +408,7 @@ HistoryStats.boxheader=シーズン成績
 HistoryStats.season=シーズン
 HistoryStats.season.short=S
 HistoryStats.cup=カップラウンド
-HistoryStats.cup.short=Ｃ
+HistoryStats.cup.short=C
 HistoryStats.league=シリーズ
 HistoryStats.league.short=Ser.
 HistoryStats.finalPosition=シリーズ最終順位
@@ -447,16 +447,16 @@ PlayerBirthday.BirthdayNextWeek=来週誕生日
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=シーズンの概要
-seasonstats.played=計
+seasonstats.played=試
 seasonstats.won=勝
 seasonstats.draw=分
-seasonstats.lost=負
+seasonstats.lost=敗
 seasonstats.goalplus=得
 seasonstats.goalminus=失
 seasonstats.goaldiff=±
-seasonstats.total=合計
-seasonstats.home=H
-seasonstats.away=A
+seasonstats.total=計
+seasonstats.home=Ho
+seasonstats.away=Aw
 seasonstats.league=リーグ
 seasonstats.friendly=親善試合
 seasonstats.cup=カップ
@@ -669,7 +669,7 @@ PlayerNumber.abbr=\#
 TSI=総合技能指数(Total Skill Index)
 TSI.abbr=TSI
 CanBePromotedIn=に昇格することができる。
-CanBePromotedIn.abbr=Prom
+CanBePromotedIn.abbr=昇
 Personality=個性
 Agreeability=性格
 Agreeability.abbr=Ab
@@ -690,7 +690,7 @@ Loyalty.abbr=Lo
 MotherClubBonus=出身クラブボーナス
 MotherClubBonus.abbr=MB
 Status=ステータス
-Status.abbr=ステータス
+Status.abbr=状
 Yellow_card=イエローカード
 Yellow_card.abbr=イエロー
 Red_card=レッドカード
@@ -706,7 +706,7 @@ Last_stars_EndOfGame.abbr=Rt
 Last_stars_decline=最後の茶色の☆
 Last_stars_decline.abbr=Diff
 Last_position=直近のポジション
-Last_position.abbr=Pos
+Last_position.abbr=P
 #following string uses pluralForms
 Last_match_played_as_at=%3に、%2として%1分間、直近の試合に出場した
 Last_match_didnot_play=まだプレイしていません。
@@ -735,7 +735,7 @@ Current_club.abbr=クラブ
 Current_league=現在のリーグ
 Current_league.abbr=リーグ
 JoinedSince=以降に参加しました
-JoinedSince.abbr=以降
+JoinedSince.abbr=在籍
 Hotlist=ホットリスト
 Hotlist.abbr=Hot
 Coach=コーチ
