Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9196 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -426,6 +426,10 @@ YouthPromotes.today=Играч може бити промовисан данас
 #teamstats+filters
 TeamStats.boxheader=Преглед екипе
 TeamStats.General=Општи подаци
+TeamStats.Players=Играчи
+TeamStats.Total=Укупно
+TeamStats.Selected=Изабрани
+TeamStats.Average=Просек
 TeamStats.PlayerNotToOld=Играчи < 19 г
 TeamStats.PlayerToOld=Играчи >= 19 г
 TeamStats.Cards=Kартони
@@ -551,6 +555,7 @@ Filters.ok=ОК
 Filters.clear=Обриши
 Filters.noFilter=Без филтера
 Filters.none=Без специјалности
+Filters.Attributes=Описни филтери
 Filters.days=Дани
 Filters.tsi=ТСИ
 Filters.stamina=Кондиција
@@ -560,6 +565,11 @@ Filters.specialty=Специјалност
 Filters.stars=Звездице
 Filters.minimum=Минимум
 Filters.maximum=Максимум
+Filters.over=Изнад
+Filters.under=Испод
+Filters.equal=Једнако
+Filters.notEqual=Неједнако
+
 
 match.type.league=Лига
 match.type.qualification=Бараж
