Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9203 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -426,6 +426,8 @@ YouthPromotes.today=Играч може бити промовисан данас
 #teamstats+filters
 TeamStats.boxheader=Преглед екипе
 TeamStats.General=Општи подаци
+TeamStats.Attributes=Особине
+TeamStats.Skills=Вештине
 TeamStats.Players=Играчи
 TeamStats.Total=Укупно
 TeamStats.Selected=Изабрани
@@ -555,7 +557,7 @@ Filters.ok=ОК
 Filters.clear=Обриши
 Filters.noFilter=Без филтера
 Filters.none=Без специјалности
-Filters.Attributes=Описни филтери
+Filters.Attributes=Особине
 Filters.days=Дани
 Filters.tsi=ТСИ
 Filters.stamina=Кондиција
