Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9208 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -385,7 +385,7 @@ module.RatingsDisplay.DenominationsRange.desc=Деноминације у рас
 module.RatingsDisplay.HatStats.desc=Хатстатс
 module.RatingsDisplay.HTSums.desc=Хеттрик збирне оцене
 module.SafeForWork.desc=Замењује фавикон и Хеттрик наслов у отвореним табовима да би вашем шефу било мање сумњиво. Најбоље да искључите и друге модуле који вас могу компромитовати, нарочито модуле за обавештења.
-
+module.PlayerStatsExperience.desc=Приказује и подниво искуства за играча на страници Историје наступа
 # ----------------------------------------------------------------------------
 
 
