*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9209 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -386,7 +386,7 @@ module.RatingsDisplay.DenominationsRange.desc=In the 0-20 denominations range
 module.RatingsDisplay.HatStats.desc=As HatStats
 module.RatingsDisplay.HTSums.desc=As Hattrick ratings sums
 module.SafeForWork.desc=Replaces icon and title text of Hattrick tabs
-
+module.PlayerStatsExperience.desc=Displays the experience subskill on the playerStats page
 # -----------------------------------------------------------------------------
 
 
@@ -426,6 +426,12 @@ YouthPromotes.future=Player can be promoted %1 day later, on %2.;Player can be p
 #teamstats+filters
 TeamStats.boxheader=Team overview
 TeamStats.General=General
+TeamStats.Attributes=Attributes
+TeamStats.Skills=Skills
+TeamStats.Players=Players
+TeamStats.Total=Total
+TeamStats.Selected=Selected
+TeamStats.Average=Average
 TeamStats.PlayerNotToOld=Players < 19 yr
 TeamStats.PlayerToOld=Players >\= 19 yr
 TeamStats.Cards=Cards
@@ -533,8 +539,14 @@ TransferSearchFilters.saveFilter=Save new filter
 Filters.label=Filters
 Filters.addFilterOptions=Add filter options
 Filters.ok=Ok
+Filters.Attributes=Attribute filters
 Filters.minimum=At least
 Filters.maximum=Maximum
+Filters.over=Over
+Filters.under=Under
+Filters.equal=Equal
+Filters.notEqual=Not equal
+
 
 
 matchOrder.swapPositions=Swap sides
