--- a/content/locale/ja/foxtrick.properties
+++ b/content/locale/ja/foxtrick.properties
@@ -275,6 +275,7 @@ module.LeagueNewsFilter.lineup_changes.desc=ラインナップの変更のみ表
 #MoveManagerOnline
 module.MoveManagerOnline.desc=地域のページでオンライン中の監督へのリンクを表示する。注意！オンラインプレイヤーのリストが100を超えるとすごく遅くなる。
 module.TeamPopupLinks.desc=TeamIDリンクをポイントしたとき、クイックリンク用のポップアップウィンドウを表示する
+module.TeamPopupLinks.TeamHighlight.desc=テーブルで現在のチームを強調表示する
 module.TeamPopupLinks.TeamLinks.desc=チームリンクのポップアップを追加する
 module.TeamPopupLinks.UserLinks.desc=監督リンクのポップアップを追加する
 module.TeamPopupLinks.Manager.desc=監督(チームリンク専用)
@@ -383,7 +384,6 @@ module.RatingsDisplay.DenominationsRange.desc=0-20のレベル範囲で
 module.RatingsDisplay.HatStats.desc=HatStatsで
 module.RatingsDisplay.HTSums.desc=Hattrickレーティング合計
 module.SafeForWork.desc=職場や授業中Hattrickを開いているとき、Hattrickタブのアイコンやタイトル文字を怪しくなさそうなもの(ゲームをしているとは思われないようなもの）に置き換える。危険かもしれないすべてのモジュールが無効になっているか自分でも確認してください。特に音が出る「アラート」モジュール。
-
 # -----------------------------------------------------------------------------
 
 
@@ -558,6 +558,7 @@ Filters.specialty=特殊技能
 Filters.stars=☆
 Filters.minimum=最小
 Filters.maximum=最大
+
 
 match.type.league=リーグ
 match.type.qualification=入れ替え戦
