match-simulator: added att-vs-att, htms optional now, addMatch:select auto/home/away ratings
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9211 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -552,7 +552,7 @@ Filters.notEqual=Not equal
 matchOrder.swapPositions=Swap sides
 matchOrder.staminaDiscount=Stamina effect
 matchOrder.staminaDiscount.title=Sector ratings are affected according to the contributions of each player to each sector
-matchOrder.tournamentMatch=Tournament match
+matchOrder.tournamentMatch=Tournament
 
 #Skills
 
