*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9218 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -259,12 +259,59 @@ module.NewMail.NotifyForumSound.desc=Afspil lyd på nye forum svar
 module.CopyYouth.desc=Kopiere funktioner for ungdom rapporter og kilder
 module.CopyYouth.TrainingReport.desc=Trænings rapport
 module.CopyYouth.ScoutComment.desc=Spejder kommentar
+module.CopyYouth.RejectedToHTY.desc=Kopiere spejder kommentar og åben HT-Youthclub når du afviser en spiller
+module.CopyYouth.FixturesSource.desc=Kampprogram kildekode
+module.PlayerBirthday.desc=Viser sidste og kommende fødselsdage i spillere oversigt
+module.MovePlayerSelectbox.desc=Flytter rullepanel med spillere oversigt, længere op på spiller detaljeside
+module.SeasonStats.desc=Viser statistik på kamp arkiv sider
+module.LeagueNewsFilter.desc=Filtre til at vise en bestemt type liga nyheder.
+module.LeagueNewsFilter.all.desc=Vis alle nyheder
+module.LeagueNewsFilter.friendlies.desc=Vis kun internationale venskabskampe og skiftet træner
+module.LeagueNewsFilter.transfers.desc=Vis kun transfer handeler
 #MoveManagerOnline
+module.MoveManagerOnline.desc=Flytter online managere længere op på region siden. OBS\! Det bliver meget langsom hvis listen over online spillere er over 100.
 module.TeamPopupLinks.desc=Viser et lille pop op-vindue med links, når du placerer musemarkøren over et HoldID link
-module.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
+module.TeamPopupLinks.TeamLinks.desc=Tilføj popups til hold links
+module.TeamPopupLinks.UserLinks.desc=Tilføj popups til manager links
+module.TeamPopupLinks.Manager.desc=Manager (kun for hold links)
+module.TeamPopupLinks.Team.desc=Hold (kun for manager links)
+module.TeamPopupLinks.Matches.desc=Kampe
+module.TeamPopupLinks.Players.desc=Spillere
+module.TeamPopupLinks.last_5_ips.desc=5 seneste-logins
+module.TeamPopupLinks.Guestbook.desc=Gæstebog
+module.TeamPopupLinks.SendMessage.desc=Send meddelelse
+module.TeamPopupLinks.Challenge.desc=Udfordre
+module.TeamPopupLinks.Achievements.desc=Bedrift
+module.TeamPopupLinks.TransferHistory.desc=Transfer historik
+module.TeamPopupLinks.TeamHistory.desc=Klubhistorik
+module.TeamPopupLinks.LastLineup.desc=Sidste holdopstilling
+module.TeamPopupLinks.NextMatch.desc=Næste Kamp
+module.TeamPopupLinks.AddNextMatch.desc=Tilføjer næste kamp til HT Live
+module.TeamPopupLinks.YouthMatches.desc=Ungdomskampe
+module.TeamPopupLinks.Coach.desc=Træner
+module.TeamPopupLinks.CustomLink.desc=Brugerdefinerede links i adskilte linjer. Links [BrugerID] og [HoldID] vil blive erstattet af de faktiske id'er. Eksempel\: {"link"\:"http\://example.com/[holdid]", "Titel"\: "eksempel link", "mere"\: falsk, "nyTab"\: sandt}
+module.SkillColoring.desc=Bedre visualisering af evner
+module.SkillColoring.skill_color.desc=Farvelægger evner
+module.SkillColoring.only_skill_color.desc=Farvelægger kun evner og ikke personligheder, fan humør etc.
+module.SkillColoring.skill_number.desc=Vis evner også som nummer f.eks. God (7)
+module.SkillColoring.skill_number_translated.desc=Vis evner også oversat til engelsk og som nummer f.eks. God (Solid 7)
+module.SkillColoring.skill_select.desc=Vis også tal på transfer Søgning dvs. God (7)
+module.SkillColoring.no_skill_links.desc=Skjuler understregning og grøn skrifttype givet ved HT'er
+module.BackgroundFixed.desc=Statisk baggrundsbillede.
+module.MatchIncome.desc=Vis tilskuerindtægterne i kampreferatet
 #YouthSkillHideUnknown
+module.YouthSkillHideUnknown.desc=Skjul ukendt evner og/eller "Maksimum" ordet på ungdom spillere side
+module.YouthSkillHideUnknown.HideUnknown.desc=Skjul ukendte evner
+module.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Skjule "Maksimum" ordet for at få mere plads
+module.SkillTable.desc=Vis spillere evner som en tabel.
+module.SkillTable.OtherTeams.desc=Aktivere for andre hold
+module.SkillTable.ColouredYouth.desc=Vis farvet ungdoms evner
 #HighlightCupwins
+module.HighlightCupwins.desc=Fremhæve vindende hold på cup kamp side
+module.HighlightCupwins.HighlightCupsets.desc=Fremhæve Cup sejre (kampe vundet af hold af lavere rang)
+module.SkillTranslation.desc=Tilføjer engelske oversættelser til evner på hjælp/betegnelser side
 #CountryList
+module.CountryList.desc=Ændringer af land navne
 # -----------------------------------------------------------------------------
 
 
