--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -383,7 +383,9 @@ module.Filter.desc=Añade filtros a la página de Mejores Jugadores
 module.RatingsDisplay.desc=Mostrar las calificaciones promedio en estadisticas dentro del rango 0-20
 module.RatingsDisplay.DenominationsRange.desc=En el rango de denominaciones 0 a 20
 module.RatingsDisplay.HatStats.desc=Como Hatstats
+module.RatingsDisplay.HTSums.desc=Como suma de calificaciones de Hattrick
 module.SafeForWork.desc=Reemplaza el icono y el título de las pestañas de Hattrick para que se vean menos sospechosas. Asegúrate de que también deshabilitas todos los demás módulos que pueden ser riesgosos, especialmente los módulos de "Alertas".
+module.PlayerStatsExperience.desc=Muestra el subnivel de experiencia en la página de Historial de Actuaciones
 # -----------------------------------------------------------------------------
 
 
@@ -424,6 +426,12 @@ YouthPromotes.today=¡El jugador puede ser promocionado hoy\!
 #teamstats+filters
 TeamStats.boxheader=Resumen del Equipo
 TeamStats.General=General
+TeamStats.Attributes=Atributos
+TeamStats.Skills=Habilidades
+TeamStats.Players=Jugadores
+TeamStats.Total=Total
+TeamStats.Selected=Seleccionados
+TeamStats.Average=Promedio
 TeamStats.PlayerNotToOld=Jugadores < 19 años
 TeamStats.PlayerToOld=Jugadores >\= 19 años
 TeamStats.Cards=Tarjetas
@@ -549,6 +557,7 @@ Filters.ok=Ok
 Filters.clear=Limpiar
 Filters.noFilter=Sin filtro
 Filters.none=Ninguno
+Filters.Attributes=Filtros de atributos
 Filters.days=Días
 Filters.tsi=TSI
 Filters.stamina=Condición
@@ -558,6 +567,10 @@ Filters.specialty=Especialidad
 Filters.stars=Estrellas
 Filters.minimum=Mínimo
 Filters.maximum=Máximo
+Filters.over=Sobre
+Filters.under=Debajo
+Filters.equal=Igual
+Filters.notEqual=Diferente
 
 
 match.type.league=Liga
