--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -382,7 +382,9 @@ module.Filter.desc=Ajoute des filtres à la page des joueurs
 module.RatingsDisplay.desc=Affiche les notes dans différent style
 module.RatingsDisplay.DenominationsRange.desc=Dans l'ordre des caractéristiques de 0 à 20
 module.RatingsDisplay.HatStats.desc=Comme HatStats
+module.RatingsDisplay.HTSums.desc=Selon les notes de hattrick
 module.SafeForWork.desc=Remplace l'icône et le texte du titre des onglets Hattrick pour être moins suspect. Assurez-vous que vous avez désactivez également tous les autres modules qui pourraient vous démasquer, notamment les modules « Alertes ».
+module.PlayerStatsExperience.desc=Les points d'expérience acquis s'affichent sur la page des statistiques du joueur
 # -----------------------------------------------------------------------------
 
 
@@ -423,6 +425,12 @@ YouthPromotes.today=Le joueur peut être promu aujourd'hui \!
 #teamstats+filters
 TeamStats.boxheader=Synthèse de l'équipe
 TeamStats.General=Général
+TeamStats.Attributes=Attributs
+TeamStats.Skills=Caractéristiques
+TeamStats.Players=Joueurs
+TeamStats.Total=Total
+TeamStats.Selected=Sélectionné
+TeamStats.Average=Moyenne
 TeamStats.PlayerNotToOld=Joueurs < 19 ans
 TeamStats.PlayerToOld=Joueurs >\= 19 ans
 TeamStats.Cards=Cartons
@@ -548,6 +556,7 @@ Filters.ok=Ok
 Filters.clear=Effacer
 Filters.noFilter=Pas de filtre
 Filters.none=Aucun
+Filters.Attributes=Filtres d'attribut
 Filters.days=Jours
 Filters.tsi=TSI
 Filters.stamina=Endurance
@@ -557,6 +566,10 @@ Filters.specialty=Spécialité
 Filters.stars=Étoiles
 Filters.minimum=Au moins
 Filters.maximum=Maximum
+Filters.over=Supérieur à
+Filters.under=Inférieur à
+Filters.equal=Égal à
+Filters.notEqual=Pas égal à
 
 
 match.type.league=Ligue
@@ -666,7 +679,7 @@ SkillTable.addHomegrown.title=Ajoute tous les joueurs issus du club de l'équipe
 SkillTable.showTimeInClub.title=Montre le temps restant d'ici à ce que le joueur puisse rejoindre l'équipe senior
 PlayerNumber=Numéro de maillot
 PlayerNumber.abbr=\#
-TSI=Total Skill Index
+TSI=Total Skill Index (TSI)
 TSI.abbr=TSI
 CanBePromotedIn=Peut être promu dans
 CanBePromotedIn.abbr=Prom
