--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -385,6 +385,7 @@ module.RatingsDisplay.DenominationsRange.desc=U 0-20 denominacijskom rasponu
 module.RatingsDisplay.HatStats.desc=Kao HatStats
 module.RatingsDisplay.HTSums.desc=Zbroj ocjena kao u Hattricku
 module.SafeForWork.desc=Zamjenjuje ikonu i naslovni tekst Hattrickovih kartica
+module.PlayerStatsExperience.desc=Pokazuje podrazinu iskustva na igračevoj stranici
 # -----------------------------------------------------------------------------
 
 
@@ -425,6 +426,12 @@ YouthPromotes.today=Igrač se može promovirati danas\!
 #teamstats+filters
 TeamStats.boxheader=Pregled momčadi
 TeamStats.General=Općenito
+TeamStats.Attributes=Atributi
+TeamStats.Skills=Vještine
+TeamStats.Players=Igrači
+TeamStats.Total=Ukupno
+TeamStats.Selected=Odabrano
+TeamStats.Average=Prosjek
 TeamStats.PlayerNotToOld=Igrači ispod 19 god.
 TeamStats.PlayerToOld=Igrači sa ili iznad 19 god.
 TeamStats.Cards=Kartoni
@@ -550,6 +557,7 @@ Filters.ok=Ok
 Filters.clear=Obriši
 Filters.noFilter=Bez filtera
 Filters.none=Ništa
+Filters.Attributes=Filteri atributa
 Filters.days=Dana
 Filters.tsi=TSI
 Filters.stamina=Izdržljivost
@@ -559,6 +567,10 @@ Filters.specialty=Specijalnost
 Filters.stars=Zvjezdice
 Filters.minimum=Barem
 Filters.maximum=Najviše
+Filters.over=Iznad
+Filters.under=Ispod
+Filters.equal=Jednako
+Filters.notEqual=Nejednako
 
 
 match.type.league=Liga
