--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -385,6 +385,7 @@ module.RatingsDisplay.DenominationsRange.desc=0-20 등급 범위
 module.RatingsDisplay.HatStats.desc=HatStats
 module.RatingsDisplay.HTSums.desc=Hattrick 레이팅 합계로서
 module.SafeForWork.desc=Hattrick 탭의 아이콘과 제목을 교체
+module.PlayerStatsExperience.desc=선수 활약상 페이지에 경험 subskill을 표시합니다
 # -----------------------------------------------------------------------------
 
 
@@ -425,6 +426,12 @@ YouthPromotes.today=이 선수는 오늘 승격할 수 있습니다\!
 #teamstats+filters
 TeamStats.boxheader=팀 개요
 TeamStats.General=일반
+TeamStats.Attributes=특성
+TeamStats.Skills=스킬
+TeamStats.Players=선수
+TeamStats.Total=총
+TeamStats.Selected=선택
+TeamStats.Average=평균
 TeamStats.PlayerNotToOld=19세 미만
 TeamStats.PlayerToOld=19세 이상
 TeamStats.Cards=카드
@@ -550,6 +557,7 @@ Filters.ok=확인
 Filters.clear=지우기
 Filters.noFilter=필터 없음
 Filters.none=없음
+Filters.Attributes=특성 필터
 Filters.days=일
 Filters.tsi=TSI
 Filters.stamina=체력
@@ -559,6 +567,10 @@ Filters.specialty=특수능력
 Filters.stars=별점
 Filters.minimum=최소
 Filters.maximum=최대
+Filters.over=초과
+Filters.under=미만
+Filters.equal=같음
+Filters.notEqual=같지 않음
 
 
 match.type.league=리그
