--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -379,6 +379,7 @@ module.MatchSimulator.desc=Adds a match simulator to the match order interface.
 module.MatchSimulator.RatingsOnTop.desc=Keeps rating prediction on top
 module.MatchSimulator.RatingsBelow.desc=Displays prediction below
 module.MatchSimulator.RatingsRight.desc=Displays prediction on the right
+module.MatchSimulator.HTMSPrediction.desc=Add HTMS prediction
 module.HeaderToggle.desc=Clicking on h2-headers toggles showing and hiding of the following section. Remembers last setting individually based on page type and header title
 module.Filter.desc=Adds filters to top players page
 module.RatingsDisplay.desc=Displays average ratings in a different style
@@ -552,7 +553,17 @@ Filters.notEqual=Not equal
 matchOrder.swapPositions=Swap sides
 matchOrder.staminaDiscount=Stamina effect
 matchOrder.staminaDiscount.title=Sector ratings are affected according to the contributions of each player to each sector
+matchOrder.attVsDef=Attack vs. defense
+matchOrder.attVsDef.title=Either display opponents ratings as attack-vs-defence or as attack-vs-attack
 matchOrder.tournamentMatch=Tournament
+matchOrder.homeAway=Auto-detect, add home team or away team?
+matchOrder.homeAway.abbr=H/A
+matchOrder.default=Default
+matchOrder.default.abbr=D
+matchOrder.home=Home
+matchOrder.home.abbr=H
+matchOrder.away=Away
+matchOrder.away.abbr=A
 
 #Skills
 
