Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9232 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -129,6 +129,7 @@ module.LinksAchievements.desc=Додаје персонализоване лин
 module.LinksStaff.desc=Додаје персонализоване линкове на страницу особља.
 module.LinksTracker.desc=Додаје неколико екстерних линкова за базе играча репрезентација одговарајућим страницама националних тимова и играча.
 module.LinksClubTransfers.desc=Додаје персонализоване линкове на страницу 'Тренутне понуде' за трансфере вашег клуба.
+module.LinksWorld.desc=Додаје персонализоване линкове на страницу 'Свет'
 module.LoyaltyDisplay.desc=Означава ефекат оданости и бонуса за матични клуб на страници играча (само ако је укључена опција 'Прикажи вештине као линије')
 module.ForumAlterHeaderLine.desc=Модификација заглавља порука на форуму.
 module.Singleline2.desc=Алтернативни ForumHeader модул за приказивање заглавља на форуму у једној линији. Нешто je бржи од осталих верзија. Онемогућава неке од конфликата у модулима који мењају изглед порука на форуму.
