*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9233 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -312,6 +312,50 @@ module.HighlightCupwins.HighlightCupsets.desc=Fremhæve Cup sejre (kampe vundet 
 module.SkillTranslation.desc=Tilføjer engelske oversættelser til evner på hjælp/betegnelser side
 #CountryList
 module.CountryList.desc=Ændringer af land navne
+module.CountryList.SelectBoxes.desc=Erstatter engelske landnavne af deres oprindelige navne i rullepanelet
+module.CountryList.TeamPage.desc=Viser en tekst med link til ligaen før region og serie på hold side
+module.CountryList.ManagerPage.desc=Viser en tekst med link til ligaen før sproget på manager siden
+module.CountryList.HideFlagOntop.desc=Fjerner linket til ligaen på hold side
+module.MatchTables.desc=Fjerner tomme hvide felter på kamp tabeller
+module.MatchTables.RemoveTime.desc=Fjerner kamptid på aktuel kamp tabel
+module.YouthPromotes.desc=Viser dage til at rykke en ungdom spiller op
+module.HTMSPrediction.desc=Tilføj resultatet forudsigelse på kamprapport side
+module.HighlightOwnerless.desc=Markér ejerløse hold på serie siden.
+module.LastLogin.desc=Viser tid siden sidste login på brugerens side
+module.TransferCompareSort.desc=Ved at klikke på overskriften, sorterer Transfer Sammenlign resultater ved TSI, pris eller form
+module.ForumStripHattrickLinks.desc=Afkorter interne links i forum fra serveren, for at gøre dem brugbare. Tilføjer også mellemrum for funktioner i / b / u i pre-tags (FormatPostingText modul)"
+module.ForumStripHattrickLinks.NoConfirmStripping.desc=Ingen bekræftelse før afkortning af links
+module.RapidId.desc=En bekvem indtastningsfeltet øverst på siden til at se holdet, spiller, osv. ved id
+module.YouthSeriesEstimation.desc=I søge tabellen, anslårs starttidspunktet for ungdoms ligaer, der er i sæson pausen.
+module.LocalTime.desc=Eventuelt vis tidspunkt i lokal tidszone i stedet for Hattrick tidszone
+module.ForumThreadAutoIgnore.desc=Ignorere forum emner automatisk med udvalgte tags (emner med [Tag] eller {Tag}).
+module.ForumThreadAutoIgnore.Tags.desc=Liste over tags, f.eks\: NT, idé, Fejl. Kommasepareret, store og små bogstaver.
+module.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Godkend tråde ved deres id'er (delen før punktumet). Godkendte tråde bliver ikke ignoreret. Kommasepareret.
+module.TableSort.desc=Gør alle 'rigtige' tabeller som har en overskrift, mulig for sortering (herunder tabeller i forum indlæg)
+module.LiveAlert.desc=Vis en meddelelse for HT Live mål
+module.LiveAlert.Sound.desc=Afspil også lyd
+module.OldStyleFace.desc=Vis ansigter i gamle Hattrick stil
+module.NtPeek.desc=Titter NT/U20 kampe på land side og Min Hattrick
+module.SeriesFlags.desc=Vis liga flag ved siden af ​​bruger links
+module.SeriesFlags.Guestbook.desc=Vis i gæstebog
+module.SeriesFlags.Supporters.desc=Vis i supporter boks af et hold
+module.SeriesFlags.Visitors.desc=Vis i de seneste besøgende boks
+module.SeriesFlags.CountryOnly.desc=Vis landets flag, uden liga navn
+module.HTMSPoints.desc=Vis trænings pointene for en spiller beregnet med HTMS evne tabel
+module.HTMSPoints.AddToPlayer.desc=Vis på apillere side
+module.HTMSPoints.AddToSearchResult.desc=Vis på transfersøgnings resultatside
+module.HTMSPoints.AddToPlayerList.desc=Vis på spillere listeside
+module.TableOfStatisticalTruth.desc=Statistiske forudsigelse af det endelige liga stillinger (kun for afsluttet sæsoner).
+module.FriendlyInterface.desc=Justerer for at give mere brugervenlige brugerflade
+module.FriendlyInterface.FullPlayerNameInLineUp.desc=Vis Spillernavne uden ellipser i opstillings side
+module.FriendlyInterface.NtLinkForNtPlayer.desc=Vis  landsholde som links til landsholdspillere
+module.FriendlyInterface.HideAnswerTo.desc=Skjul svar til-links i gæstebog
+module.FriendlyInterface.HideSpeechlessSecretary.desc=Skjule Mit Kontor, hvis der ikke er noget nyt
+module.MyMonitor.desc=Overvåg de seneste kampe af venner og fjender på Min Hattrick
+module.MyMonitor.TeamIcons.desc=Vis hold logoer
+module.MarkAllAsRead.desc=En knap til at markere alle tråde i alle fora som læst
+module.ShowFriendlyBooked.desc=Vis om et hold har aftalt en venskabskamp på liga side
+module.ShowFriendlyBooked.OnDemand.desc=Vis venskabskampe kun on-demand
 # -----------------------------------------------------------------------------
 
 
