--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -130,6 +130,7 @@ module.LinksAchievements.desc=Adds some external links to the achievements page
 module.LinksStaff.desc=Adds some external links to the staff page
 module.LinksTracker.desc=Adds some external tracker links to the corresponding NT pages and player pages
 module.LinksClubTransfers.desc=Adds some external links to the club transfer page
+module.LinksWorld.desc=Adds some external links to the world page
 module.LoyaltyDisplay.desc=Highlight the effect of loyalty and mother club bonus on your personal player page (Works only with 'Show skill bars' option enabled in HT preferences)
 module.ForumAlterHeaderLine.desc=Alters posting header line
 module.Singleline2.desc=Alternative ForumHeader single line module. Slightly faster than the other versions. Disables some conflicting forum post changing modules.
