--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -377,6 +377,7 @@ module.MatchSimulator.desc=Ajoute un simulateur à l'interface d'ordre de match
 module.MatchSimulator.RatingsOnTop.desc=Garder les notes de prévision au dessus
 module.MatchSimulator.RatingsBelow.desc=Prédiction ci-dessous
 module.MatchSimulator.RatingsRight.desc=Affiche les prédictions sur la droite
+module.MatchSimulator.HTMSPrediction.desc=Afficher la prédiction HTMS
 module.HeaderToggle.desc=Cliquer sur h2-headers permet de basculer entre montrer et cacher la section suivante. Il se souvient de la dernière configuration personnelle basé sur le type et l'en-tête de la page
 module.Filter.desc=Ajoute des filtres à la page des joueurs
 module.RatingsDisplay.desc=Affiche les notes dans différent style
@@ -592,8 +593,18 @@ matchOrder.swapPositions=Inversez les positions
 matchOrder.options=Options
 matchOrder.staminaDiscount=Effet de l'endurance
 matchOrder.staminaDiscount.title=Les notes de secteur dépendent des contributions de chaque joueur
+matchOrder.attVsDef=Attaque/Défense
+matchOrder.attVsDef.title=Comparer attaque/défense ou attaque/attaque
 matchOrder.summary=Résumé
 matchOrder.tournamentMatch=Match de tournoi
+matchOrder.homeAway=Détection automatique, équipe à domicile ou à l'extérieur ?
+matchOrder.homeAway.abbr=D/E
+matchOrder.default=Par défaut
+matchOrder.default.abbr=D
+matchOrder.home=Domicile
+matchOrder.home.abbr=D
+matchOrder.away=Extérieur
+matchOrder.away.abbr=E
 
 #Skills
 Playmaking=Construction
