--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -183,7 +183,7 @@ module.PlayerFilters.desc=Dodati izbornik za filtriranje igrača po vještinama 
 module.HistoryStats.desc=Pregled podataka klupske povijesti.
 module.LargeFlags.desc=Povećati zastavicu u pregledu igrača
 module.GoToPostBox.desc=Dodati na forum polje 'Idi na poruku br\: xxx.yyy'
-module.TeamSelectBox.desc=Na stranici igrača zamijeniti listu igrača s padajućim izbornikom. Klikomm na zaglavlje se mijenja prikaz
+module.TeamSelectBox.desc=Na stranici igrača zamijeniti listu igrača s padajućim izbornikom. Klikom na zaglavlje se mijenja prikaz.
 module.CopyPlayerAd.desc=Dodati ikonu za kopiranje igračevog oglasa u međuspremnik (na osobnoj stranici igrača u rubrici 'Dodatne Radnje')
 module.CopyPlayerAd.Sorted.desc=Poredaj vještine u silaznom redoslijedu.
 module.CopyPlayerAd.NonTableStyle.desc=Kopiraj u običnom stilu bez tablica.
@@ -355,7 +355,7 @@ module.TableOfStatisticalTruth.desc=Statističko predviđanje ligaškog plasmana
 module.FriendlyInterface.desc=Ugađanje za omogućavanje jednostavnijeg sučelja
 module.FriendlyInterface.FullPlayerNameInLineUp.desc=Prikaži igračka imena bez elipsi u postavkama taktike
 module.FriendlyInterface.NtLinkForNtPlayer.desc=Prikaz nacionalne momčadi kao link za igrače reprezentacije
-module.FriendlyInterface.HideAnswerTo.desc=Sakrij odgovor-na linku u knjizi gostiju
+module.FriendlyInterface.HideAnswerTo.desc=Sakrij odgovor na linku u knjizi gostiju
 module.FriendlyInterface.HideSpeechlessSecretary.desc=Sakrij pomoćnika ako nema što za prijaviti
 module.MyMonitor.desc=Prati posljednje utakmice prijatelja u Moj Hattrick
 module.MyMonitor.TeamIcons.desc=Pokaži grb momčadi
@@ -378,6 +378,7 @@ module.MatchSimulator.desc=Dodaje simulator utakmica na sučelje postavljanja ta
 module.MatchSimulator.RatingsOnTop.desc=Održava predviđanje ocjena na vrhu
 module.MatchSimulator.RatingsBelow.desc=Prikazuje predviđanje u nastavku
 module.MatchSimulator.RatingsRight.desc=Prikazuje predviđanja na desnoj strani
+module.MatchSimulator.HTMSPrediction.desc=Dodaj HTMS predviđanje
 module.HeaderToggle.desc=Klikom na h2-zaglavlja prebacuje prikazivanje i skrivanje u sljedećem odjeljku. Pamti posljednju postavku pojedinačno na temelju vrste stranica i zaglavlja naslova
 module.Filter.desc=Dodaje filtere na vrh stranice igrača
 module.RatingsDisplay.desc=Prikazuje prosječne ocjene u drugom stilu
@@ -593,8 +594,18 @@ matchOrder.swapPositions=Zamjena pozicija
 matchOrder.options=Opcije
 matchOrder.staminaDiscount=Smanjenje zbog izdržljivosti
 matchOrder.staminaDiscount.title=Ocjene pojedinih sektora se računaju prema igračevom doprinosu tom sektoru
+matchOrder.attVsDef=Napad-obrana
+matchOrder.attVsDef.title=Prikaži protivnikove ocjene kao napad-obrana ili kao napad-napad
 matchOrder.summary=Rezime
 matchOrder.tournamentMatch=Utakmica turnira
+matchOrder.homeAway=Automatski detektirati, dodaj domaću ili gostujuću momčad?
+matchOrder.homeAway.abbr=D/G
+matchOrder.default=Standardno
+matchOrder.default.abbr=S
+matchOrder.home=Kod kuće
+matchOrder.home.abbr=D
+matchOrder.away=U gostima
+matchOrder.away.abbr=G
 
 #Skills
 Playmaking=Kreiranje
